# image_classification

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_ingestion.ipynb
src/images/: analytics.py  config.py
