[tool.poetry]
name = "image-classification"
version = "0.1.0"
description = ""
authors = ["Borja <borjaregueral@gmail.com>"]
readme = "README.md"
packages = [{include = "image_classification", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11.8"
pandas = "^2.2.2"
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
