[tool.poetry]
name = "image-classification"
version = "0.1.0"
description = ""
authors = ["Borja <borjaregueral@gmail.com>"]
readme = "README.md"
packages = [{include = "images", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11.8"
pandas = "^2.2.2"
jupyter-black = "^0.3.0"
jupyter-contrib-nbextensions = "^0.7.0"
jupyterlab-code-formatter = "^3.0.2"
black = "^24.8.0"
nbconvert = "^7.16.4"
optuna = "^4.0.0"
scikit-learn = "^1.5.1"
tensorflow-metal = "^1.1.0"
tensorflow-macos = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
